--- a/singolo1.css
+++ b/singolo1.css
@@ -18,6 +18,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Lato Black";
+  src: url("./assests/fonts/Lato-Black.ttf");
+  /* font-weight: 400; */
+  font-style: normal;
+}
+
 body {
   width: 1020px;
   margin: 0 auto;
@@ -25,7 +32,7 @@ body {
 
 header {
   display: flex;
-  padding: 30px 40px;
+  padding: 29.5px 40px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
   justify-content: space-between;
@@ -44,7 +51,7 @@ li {
   color: #fff;
   text-decoration: none;
   font-size: 12px;
-  text-align: left;
+
   text-transform: uppercase;
 }
 ul :not(:last-child) {
@@ -66,4 +73,41 @@ h4 {
 }
 span {
   color: #f06c64;
+}
+
+.slider {
+  background-color: #f06c64;
+  display: inline-flex;
+  width: 100%;
+  height: 599px;
+  border-bottom: 6px solid #ea676b;
+}
+.vertical {
+  margin-left: 41px;
+  margin-top: 52.5px;
+}
+.horizontal {
+  margin-left: 72.5px;
+  margin-top: 173px;
+}
+.left-button {
+  background-image: url("assests/images/chevron-left-solid.svg");
+  background-color: #f06c64;
+  fill: #ca4549;
+  background-repeat: no-repeat;
+  border: none;
+  width: 32px;
+  height: 32px;
+  margin-top: 278px;
+  margin-left: 40px;
+}
+.right-button {
+  background-image: url("assests/images/chevron-right-solid.svg");
+  background-color: #f06c64;
+  background-repeat: no-repeat;
+  border: none;
+  width: 32px;
+  height: 32px;
+  margin-top: 278px;
+  margin-left: 52.5px;
 }
