--- a/singolo1.css
+++ b/singolo1.css
@@ -71,7 +71,7 @@ ul :last-child {
   cursor: pointer;
 }
 
-h4 {
+.singolo-logo {
   color: #fff;
   font-size: 25px;
   text-transform: uppercase;
@@ -118,20 +118,74 @@ span {
   margin-left: 52.5px;
 }
 
-h3 {
+.service {
+  margin-bottom: 18px;
   margin-left: 40px;
-  margin-top: 60px;
+  padding-top: 60px;
   font-family: "Lato Black";
   font-size: 30px;
   color: #666d89;
 }
-p {
-  margin-left: 40px;
-  margin-top: 18px;
+.long-text {
+  padding: 0 40px;
+  margin-bottom: 24px;
   font-family: "Lato Light";
   font-size: 18px;
   color: #767e9e;
   font-weight: 300;
   word-spacing: 1px;
   line-height: 30px;
+}
+
+main {
+  background-color: #f2f2f2;
+}
+p {
+  font-family: "Lato Regular";
+  font-size: 12px;
+  line-height: 20px;
+  color: #666d89;
+  word-spacing: 1px;
+}
+article {
+  line-height: 40px;
+}
+article h3 {
+  line-height: 24px;
+  margin-bottom: 8px;
+}
+.icon {
+  border: solid 2px #666d89;
+  border-radius: 50px;
+  height: 59px;
+  width: 59px;
+  padding: 10px;
+  margin-top: 4px;
+  margin-right: 20px;
+}
+
+article h3 {
+  font-family: "Lato Black";
+  color: #666d89;
+  font-size: 18px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 0 32px;
+  margin: 0 -10px;
+}
+
+.box {
+  display: flex;
+  width: 33.33%;
+  flex-grow: 1;
+  padding: 0 20px;
+  margin-bottom: 12px;
+}
+.services {
+  padding-bottom: 32px;
+  border-bottom: 6px solid #ffffff;
 }
