--- a/singolo2.css
+++ b/singolo2.css
@@ -27,7 +27,7 @@ body {
   width: 1020px;
   margin: 0 auto;
 }
-main {
+.singolo-2 {
   background-color: #f2f2f2;
 }
 .bg-color {
@@ -43,7 +43,7 @@ main {
   margin-bottom: 18px;
 }
 
-.long-text {
+.singolo-2 .long-text {
   font-family: "Lato Light";
   font-size: 18px;
   color: #767e9e;
@@ -79,7 +79,7 @@ main {
   border-color: #dedede !important;
 }
 
-.row {
+.singolo-2 .row {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 50px;
@@ -95,47 +95,46 @@ main {
   display: none;
 }
 
-.content h3 {
+.container .content h3 {
   font-family: "Lato Black";
   color: #666d89;
   font-size: 30px;
   line-height: 30px;
   padding-bottom: 22px;
 }
-.content {
+.container .content {
   padding-bottom: 34px;
 }
 
 .container {
   padding: 60px 40px;
-}
-.container {
   border-bottom: 6px solid #fff;
 }
+
 .face {
   display: flex;
 }
 
-article h3 {
+.face article h3 {
   font-family: "Lato Black";
   color: #666d89;
   font-size: 18px;
   padding-bottom: 10px;
 }
-article p {
+.face article p {
   font-family: "Lato Regular";
   font-size: 12px;
   color: #767e9e;
   line-height: 20px;
   padding-bottom: 26px;
 }
-.box {
+.face .box {
   padding-right: 16px;
 }
-.box img {
+.face .box img {
   padding-bottom: 8px;
 }
-.fa {
+.icons .fa {
   text-decoration: none;
   border: 1px solid #666d89;
   border-radius: 50%;
