--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@
   src: url("./assests/fonts/Lato-Light.ttf");
   font-weight: 300;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   width: 1020px;
   margin: 0 auto;
@@ -41,9 +43,9 @@ header {
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
   justify-content: space-between;
-}
-.nav-links .active {
-  color: #f06c64 !important;
+  position: fixed;
+  width: 1020px;
+  z-index: 1;
 }
 
 header nav {
@@ -53,23 +55,33 @@ header nav {
 li {
   display: inline-flex;
 }
+/* li:not(:last-child)::after {
+  content: "";
+  width: 3px;
+  height: 3px;
+  background-color: #494e62;
+  border-radius: 50%;
+
+} */
 
 .nav-links a {
   font-family: "Lato Bold";
   color: #fff;
   text-decoration: none;
   font-size: 12px;
-
   text-transform: uppercase;
 }
 
+ul .active {
+  color: #f06c64;
+}
 ul :not(:last-child) {
   margin: 4.5px 10px;
 }
 ul :last-child {
   margin-left: 6px;
 }
-.nav-links a:hover {
+li a:not(.active):hover {
   color: #f06c64;
   cursor: pointer;
 }
@@ -80,53 +92,139 @@ ul :last-child {
   text-transform: uppercase;
   font-family: "Lato Regular", serif;
 }
+
 .singolo-logo span {
   color: #f06c64;
 }
 
-.slider {
-  background-color: #f06c64;
-  display: inline-flex;
-  width: 100%;
-  height: 599px;
-  border-bottom: 6px solid #ea676b;
+.main {
+  padding-top: 95px;
 }
+
+.carousel {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 600px;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.carousel-btns {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  top: 50%;
+  width: 100%;
+  padding: 0 40px;
+  transform: translateY(-66%);
+}
+
+.carousel-btn-left {
+  width: 32px;
+  height: 32px;
+  fill: #ca4549;
+
+  border: none;
+  background-image: url("assests/images/chevron-left-solid.svg");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.carousel-btn-right {
+  width: 32px;
+  height: 32px;
+
+  border: none;
+  background-image: url("assests/images/chevron-right-solid.svg");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: right;
+  cursor: pointer;
+}
+
+.carousel-slide {
+  position: absolute;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
+}
+
+.carousel-slide-1 {
+  background-color: #f06c64;
+  width: 100%;
+  display: flex;
+  border-bottom: 6px solid #ea676b;
+  overflow: hidden;
+}
+
+.carousel-slide-2 {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  background-color: #648bf0;
+  border-bottom: 6px solid #5176db;
+  overflow: hidden;
+}
+
+.carousel-slide-active {
+  opacity: 1;
+}
+
+.three-phones {
+  margin-top: 43px;
+  margin-left: 40px;
+}
+
 .vertical {
-  margin-left: 41px;
+  margin-left: 113px;
   margin-top: 52.5px;
 }
 .horizontal {
   margin-left: 72.5px;
   margin-top: 173px;
 }
-.left-button {
-  background-image: url("assests/images/chevron-left-solid.svg");
-  background-color: #f06c64;
-  fill: #ca4549;
-  background-repeat: no-repeat;
-  border: none;
-  width: 32px;
-  height: 32px;
-  margin-top: 278px;
-  margin-left: 40px;
-  cursor: pointer;
+
+#carousel .hidden {
+  display: none;
 }
-.right-button {
-  background-image: url("assests/images/chevron-right-solid.svg");
-  background-color: #f06c64;
-  background-repeat: no-repeat;
-  border: none;
-  width: 32px;
-  height: 32px;
-  margin-top: 278px;
-  margin-left: 52.5px;
-  cursor: pointer;
+
+#horizontal-black,
+#vertical-black {
+  position: absolute;
+  background-color: #000000;
+  width: 335px;
+  height: 190px;
+  pointer-events: none;
+  border-radius: 4px;
+}
+#horizontal-black {
+  margin-top: 186px;
+  margin-left: 484px;
+}
+#vertical-black {
+  margin-top: 189px;
+  margin-left: 54px;
+  transform: rotate(90deg);
+}
+.turnoff-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  opacity: 0;
+}
+.turnoff-leftbutton {
+  margin: -78px 0px 38px 87px;
+}
+.turnoff-rightbutton {
+  margin: -157px 0px 0px 9px;
 }
 
 .service {
   margin-bottom: 18px;
-  margin-left: 40px;
-  padding-top: 60px;
+  margin-left: 39px;
+  padding-top: 59px;
   font-family: "Lato Black";
   font-size: 30px;
   color: #666d89;
@@ -142,20 +240,18 @@ ul :last-child {
   line-height: 30px;
 }
 
-.singolo-1-bg {
-  background-color: #f2f2f2;
-}
 .row .box p {
   font-family: "Lato Regular";
   font-size: 12px;
+  height: 60px;
   line-height: 20px;
   color: #666d89;
-  word-spacing: 1px;
-  width: 110%;
+  text-align: justify;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 220px;
 }
-.box article {
-  line-height: 40px;
-}
+
 .box article h3 {
   line-height: 24px;
   margin-bottom: 8px;
@@ -176,29 +272,51 @@ ul :last-child {
 .row {
   display: flex;
   flex-wrap: wrap;
+}
+
+.col-md-3 {
+  width: 220px;
+  height: 187px;
+}
+
+.portfolio-col {
+  margin-bottom: 20px;
+}
+
+.portfolio-img {
   width: 100%;
-  padding: 0 32px;
+  height: 100%;
+}
+.portfolio-row {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.portfolio-img-active {
+  border: 5px solid #f06c64;
+}
+
+.our-services-row {
+  margin: 0px 30px;
 }
 
 .services .box {
   display: flex;
   width: 33.33%;
-  flex-grow: 1;
-  padding: 0 12px;
+
+  padding: 0 10px;
   margin-bottom: 32px;
 }
 .services {
-  padding-bottom: 32px;
+  padding-bottom: 31px;
   border-bottom: 6px solid #ffffff;
-}
-
-.singolo-2 {
   background-color: #f2f2f2;
 }
+
 .bg-color {
   border-bottom: 6px solid #323746;
   background-color: #2d303a;
-  padding: 60px 40px 0px 40px;
+  padding: 60px 40px 48px 40px;
 }
 
 .portfolio {
@@ -208,13 +326,23 @@ ul :last-child {
   margin-bottom: 18px;
 }
 
-.singolo-2 .long-text {
+.bg-color .long-text {
   font-family: "Lato Light";
   font-size: 18px;
   color: #767e9e;
   font-weight: 300;
   line-height: 30px;
   padding-bottom: 10px;
+  letter-spacing: 0.15px;
+}
+#about .long-text {
+  font-family: "Lato Light";
+  font-size: 18px;
+  color: #767e9e;
+  font-weight: 300;
+  line-height: 30px;
+  padding-bottom: 10px;
+  letter-spacing: 0.15px;
 }
 
 .buttons button {
@@ -229,26 +357,21 @@ ul :last-child {
   outline: none;
 }
 
-.buttons button:hover {
+.portfolio-btn:hover {
   color: #dedede;
   cursor: pointer;
   border-color: #dedede;
 }
 .buttons {
-  padding-bottom: 20px;
+  padding-bottom: 19px;
 }
 
 /* change */
-.active {
-  color: #dedede !important;
-  border-color: #dedede !important;
+.buttons .portfolio-btn-active {
+  color: #dedede;
+  border-color: #dedede;
 }
 
-.singolo-2 .row {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 50px;
-}
 .pic {
   padding-left: 16px;
 }
@@ -256,11 +379,11 @@ ul :last-child {
 .image-wrap img {
   padding-bottom: 16px;
 }
-.image-wrap img:nth-child(n + 13) {
+.portfolio-row div:nth-child(n + 13) {
   display: none;
 }
 
-.container .content h3 {
+.container .content h2 {
   font-family: "Lato Black";
   color: #666d89;
   font-size: 30px;
@@ -272,8 +395,9 @@ ul :last-child {
 }
 
 .container {
-  padding: 60px 40px;
+  padding: 62px 40px 65px;
   border-bottom: 6px solid #fff;
+  background-color: #f2f2f2;
 }
 
 .face {
@@ -284,7 +408,10 @@ ul :last-child {
   font-family: "Lato Black";
   color: #666d89;
   font-size: 18px;
-  padding-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 300px;
+  white-space: nowrap;
 }
 .face article p {
   font-family: "Lato Regular";
@@ -292,12 +419,13 @@ ul :last-child {
   color: #767e9e;
   line-height: 20px;
   padding-bottom: 26px;
+  text-align: justify;
 }
 .face .box {
-  padding-right: 16px;
+  padding-right: 18px;
 }
 .face .box img {
-  padding-bottom: 8px;
+  padding-bottom: 10px;
 }
 .icons .fa {
   text-decoration: none;
@@ -320,13 +448,13 @@ ul :last-child {
 .container-3 {
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
-  padding: 62px 40px 0px 40px;
+  padding: 62px 40px 1px 40px;
   color: #f0d8d9;
 }
 .container-3 .content {
   padding-bottom: 34px;
 }
-.container-3 .content h3 {
+.container-3 .content h2 {
   font-family: "Lato Black";
   font-size: 30px;
   line-height: 32px;
@@ -345,10 +473,11 @@ ul :last-child {
   font-family: "Lato Regular";
   font-size: 12px;
   line-height: 22px;
-  margin-top: 8px;
-  padding-bottom: 24px;
+  margin-top: 9px;
+  padding-bottom: 22px;
   word-break: break-all;
   hyphens: none;
+  text-align: justify;
 }
 
 .container-3 .long-text {
@@ -375,6 +504,10 @@ textarea {
   margin-bottom: inherit;
   color: #f08688;
 }
+.submit:hover {
+  color: #fff;
+  font-weight: bold;
+}
 textarea {
   height: 202px;
   resize: none;
@@ -391,6 +524,7 @@ form {
   width: 620px;
   margin-right: 20px;
 }
+
 .contact-block {
   margin-bottom: 8px;
 }
@@ -409,6 +543,14 @@ form {
 .contact-info p {
   margin-top: 2px;
 }
+.contact-info a {
+  margin-top: 2px;
+  text-decoration: none;
+  color: #f0d8d9;
+}
+.contact-info a:hover {
+  font-weight: bold;
+}
 .fas {
   font-size: 12px;
   margin: 4px 14px 6px 0px;
@@ -420,7 +562,6 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 4px solid #262626;
 }
 footer h5 {
   font-family: "Lato Light";
@@ -451,4 +592,99 @@ footer h5 {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 8px;
+}
+
+#message-block {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #0008;
+}
+#message-block.hidden {
+  display: none;
+}
+#message {
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  border: 2px solid #dedede;
+  border-radius: 5px;
+  text-align: center;
+  color: #666d89;
+  background-color: #2d303a;
+  width: 30vw;
+  height: 40vh;
+}
+#message .message-paragraph {
+  font-family: "Lato Black";
+  font-size: 18px;
+}
+#message .result-subject,
+.result-description {
+  font-family: "Lato Regular";
+  font-size: 16px;
+  margin-top: 20px;
+  font-weight: bold;
+  word-wrap: break-word;
+  margin: 10px;
+}
+#message span {
+  color: white;
+  font-size: 14px;
+  font-weight: normal;
+}
+#message-block #close-btn {
+  background-color: #2d303a;
+  border: 2px solid #666d89;
+  border-radius: 5px;
+  width: 60px;
+  height: 30px;
+  color: #666d89;
+  font-family: "Lato Black";
+  font-size: 15px;
+  outline: none;
+  top: 80%;
+  left: 44%;
+  position: absolute;
+}
+
+#message-block #close-btn:hover {
+  color: #dedede;
+  cursor: pointer;
+  border-color: #dedede;
+}
+
+@keyframes slideLeftClose {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: 100%;
+  }
+}
+@keyframes slideLeftOpen {
+  0% {
+    margin-right: 100%;
+  }
+  100% {
+    margin-right: 0%;
+  }
+}
+@keyframes slideRightClose {
+  0% {
+    margin-right: 0;
+  }
+  100% {
+    margin-right: 100%;
+  }
+}
+@keyframes slideRightOpen {
+  0% {
+    margin-left: 100%;
+  }
+  100% {
+    margin-left: 0%;
+  }
 }
